<resources>
    <string name="app_name">TokenPocket</string>
    <string name="enter_title_block">钱包体系</string>
    <string name="enter_hint_choose_block">请选择钱包体系</string>
    <string name="enter_title_wallet_name">钱包名称</string>
    <string name="enter_hint_wallet_name">请输入钱包名称</string>
    <string name="enter_title_password">设置密码</string>
    <string name="enter_hint_password">请输入密码,至少8位</string>
    <string name="enter_title_verify">确认密码</string>
    <string name="enter_hint_verify">确认密码</string>
    <string name="enter_title_prompt">提示信息</string>
    <string name="enter_hint_prompt">可不填</string>
    <string name="btn_create_wallet_done">创建钱包</string>
    <string name="titleBar_about">关于我们</string>
    <string name="titleBar_dapp">Dapp浏览器</string>
    <string name="content_version">当前版本:</string>
    <string name="titleBar_agreement">使用协议</string>
    <string name="titleBar_privacy">隐私条款</string>
    <string name="toast_latest_version">已经是最新版本</string>
    <string name="titleBar_backup_wallet">备份钱包</string>
    <string name="title_backup_private_key">立即备份你的私钥</string>
    <string name="content_backup_private_kye">备份钱包:抄写私钥，并保存在安全的地方。千万不要保存在网络上。然后尝试转入转出小额资产开始使用。</string>
    <string name="title_backup_mnemonic">立即备份你的助记词</string>
    <string name="content_backup_mnemonic">备份钱包:抄写助记词，并保存在安全的地方。千万不要保存在网络上。然后尝试转入转出小额资产开始使用。</string>
    <string name="titleBar_switch_account">切换账号</string>
    <string name="titleBar_select_token">选择代币</string>
    <string name="titleBar_select_block">选择币种体系</string>
    <string name="toast_abnormal_data">数据异常:</string>
    <string name="toast_private_key_incorrect">私钥输入错误,请确认</string>
    <string name="toast_mnemonic_incorrect">助记词顺错误,请确认</string>
    <string name="titleBar_verify">确认备份信息</string>
    <string name="title_verify_private_key">确认你的钱包私钥</string>
    <string name="content_verify_private_key">请按抄写的私钥填入输入框，确认你备份的私钥正确</string>
    <string name="title_verify_mnemonic">确认你的钱包助记词</string>
    <string name="content_verify_mnemonic">请按抄写的顺序点击助记词，确认你的备份助记词正确</string>
    <string name="dialog_content_no_block">请选择币种体系</string>
    <string name="dialog_content_no_wallet_name">钱包名称不能为空</string>
    <string name="dialog_content_no_password">密码不能为空</string>
    <string name="dialog_content_no_verify_password">密码重复不能为空</string>
    <string name="dialog_content_passwords_unmatch">两次密码不同，请重新输入</string>
    <string name="dialog_content_short_password">密码长度不能小于8位</string>
    <string name="dialog_content_no_read_service">您尚未阅读并同意服务和隐私条款</string>
    <string name="toast_wallet_created">钱包创建成功</string>
    <string name="btn_creating_wallet">正在创建钱包</string>
    <string name="titleBar_service_terms">服务条款</string>
    <string name="titleBar_import_wallet">导入钱包</string>
    <string name="titleBar_manage_wallet">管理钱包</string>
    <string name="dialog_content_no_old_password">旧密码不能为空</string>
    <string name="dialog_content_no_new_password">新密码不能为空</string>
    <string name="dialog_content_no_verify_new_password">新密码确认不能为空</string>
    <string name="dialog_new_passwords_unmatch">两次输入的新密码不同，请确认</string>
    <string name="dialog_content_old_new_same">新旧密码不能一样，请重新填写</string>
    <string name="dialog_content_old_password_incorrect">旧密码错误，请重新输入旧密码</string>
    <string name="toast_password_changed">修改密码成功</string>
    <string name="titleBar_change_pwd">更改密码</string>
    <string name="titleBar_completed">完成</string>
    <string name="content_forgot_password"><![CDATA[<font color=\'#929da6\'>忘记密码? 导入助记词或私钥可重置密码。</font><font color=\'#2890fe\'>立即导入?</font>]]></string>
    <string name="toast_wallet_address_copied">钱包地址已经复制到剪贴板</string>
    <string name="toast_password_incorrect">密码错误</string>
    <string name="titleBar_save">保存</string>
    <string name="dialog_title_warning">警告</string>
    <string name="dialog_content_no_wallet_backup">钱包未备份，删除钱包将导致钱包无法找回</string>
    <string name="dialog_btn_backup">去备份</string>
    <string name="dialog_btn_delete">继续删除</string>
    <string name="dialog_content_no_key_backup">钱包未备份，删除钱包将导致钱包无法找回，请备份私钥</string>
    <string name="toast_cant_backup">没有助记词，无法备份</string>
    <string name="toast_no_network">网络未连接，请检查</string>
    <string name="titleBar_collect">收款</string>
    <string name="toast_enter_amount">请输入正确数目</string>
    <string name="toast_collect_code_err">生成收款码错误, 请检查参数</string>
    <string name="titleBar_transfer">转账</string>
    <string name="toast_order_password_incorrect">密码错误，请重新确认订单，并输入正确密码</string>
    <string name="toast_insufficient_balance">余额不足，转账失败:</string>
    <string name="toast_transfer_failed">转账失败, 错误码:</string>
    <string name="toast_transfer_success">转账成功</string>
    <string name="dialog_content_choose_token">请选择代币</string>
    <string name="dialog_content_no_wallet_address">输入或粘贴钱包地址</string>
    <string name="dialog_content_receive_address_incorrect">收款钱包地址不能和转款钱包地址相同</string>
    <string name="dialog_content_address_format_incorrect">钱包地址格式不正确</string>
    <string name="dialog_content_amount_incorrect">输入正确的转出数量</string>
    <string name="btn_transferring">正在转账...</string>
    <string name="btn_next">下一步</string>
    <string name="toast_illegal_parameters">参数非法</string>
    <string name="titleBar_transaction_details">交易详情</string>
    <string name="content_trading_success">交易成功</string>
    <string name="content_trading_pending">交易打包中</string>
    <string name="content_trading_failure">交易失败</string>
    <string name="content_trading_unknown">状态未知，请点击交易号查询</string>
    <string name="toast_transaction_info_failure">获取交易信息失败，请稍后重试</string>
    <string name="toast_url_copied">查询url已经复制到剪贴板</string>
    <string name="toast_send_address_copied">发送方地址已经复制到剪贴板</string>
    <string name="toast_receive_address_copied">收款地址已经复制到剪贴板</string>
    <string name="titleBar_transaction_query">交易查询</string>
    <string name="titleBar_message_center">消息中心</string>
    <string name="toast_update_default_wallet_failed">更新默认钱包失败</string>
    <string name="toast_private_key_copied">私钥已经复制到剪贴板</string>
    <string name="titleBar_help_center">帮助中心</string>
    <string name="toast_scan_failure">扫描错误</string>
    <string name="toast_not_support_eth_wallet">当前不支持以太钱包</string>
    <string name="toast_no_jintum_wallet">当前没有井通，请创建钱包，再扫描</string>
    <string name="toast_no_eth_wallet">当前没有以太坊，请创建钱包，再扫描</string>
    <string name="dialog_title_reminder">提示</string>
    <string name="dialog_content_switch_jintum_wallet">扫描到的地址为井通地址，但是当前钱包为非井通钱包，是否切换成井通钱包？</string>
    <string name="dialog_content_switch_eth_wallet">扫描到的地址为以太坊地址，但是当前钱包为非以太坊钱包，是否切换成以太坊钱包？</string>
    <string name="dialog_btn_not_switch">不切换</string>
    <string name="dialog_btn_switch">立即切换</string>
    <string name="content_my_asset">我的资产</string>
    <string name="content_read_service"><![CDATA[<font color=\'#565d67\'>我已经仔细阅读并同意</font><font color=\'#2890FE\'>服务及隐私条款</font>]]></string>
    <string name="titleBar_user_agreement">用户使用协议</string>
    <string name="dialog_title_no_private_key">私钥不能为空</string>
    <string name="dialog_title_key_format_incorrect">私钥格式错误</string>
    <string name="toast_wallet_exists">钱包已经存在,不需要导入</string>
    <string name="toast_import_wallet_failed">导入钱包失败</string>
    <string name="titleBar_private_key">私钥</string>
    <string name="dialog_title_mnemonic_incorrect">助记词不正确</string>
    <string name="content_network_err">网络错误</string>
    <string name="content_error_code">，错误码:</string>
    <string name="dialog_content_require_permissions">需要以下权限：</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_setting">去设置</string>
    <string name="dialog_content_camera">照相机</string>
    <string name="dialog_content_sd_card">SD卡</string>
    <string name="dialog_content_phone_status">手机状态</string>
    <string name="toast_no_messages">空信息</string>
    <string name="dialog_content_wallet_security">为了您的钱包安全，请备份钱包</string>
    <string name="titleBar_scan">扫描</string>
    <string name="dialog_content_scanning">正在扫描...</string>
    <string name="content_about_token_pocket">TokenPocket是一款移动端轻钱包APP，它旨在为普通用户提供一款安全放心，简单好用，功能强大的数字资产钱包应用</string>
    <string name="btn_user_agreement">使用协议</string>
    <string name="btn_privacy">隐私条款</string>
    <string name="btn_update_version">检测新版本</string>
    <string name="title_copy_mnemonic">抄下你的钱包助记词</string>
    <string name="content_copy_mnemonic">助记词用于恢复钱包和重置钱包密码，将它准确的抄写在纸上，并存放在只有你知道的安全的地方。</string>
    <string name="btn_backup_wallet">备份钱包</string>
    <string name="enter_title_verify_password">重复密码</string>
    <string name="enter_hint_optional">密码提示信息(可不填)</string>
    <string name="btn_create_wallet">创建钱包</string>
    <string name="btn_import_wallet">导入钱包</string>
    <string name="str_read_agreed">我已经仔细阅读并同意</string>
    <string name="str_service_privacy_policy">服务及隐私条款</string>
    <string name="btn_mnemonic">助记词</string>
    <string name="btn_private_key">私钥</string>
    <string name="enter_title_old_password">当前密码</string>
    <string name="enter_hint_old_password">当前密码</string>
    <string name="enter_title_new_password">新密码</string>
    <string name="enter_hint_new_password">新密码</string>
    <string name="enter_title_verify_new_password">重复新密码</string>
    <string name="enter_hint_verify_new_pwd">重复新密码</string>
    <string name="content_about_forgot">忘记密码? 导入助记词或私钥可重置密码</string>
    <string name="btn_change_pwd">修改密码</string>
    <string name="btn_export_private_key">导出私钥</string>
    <string name="btn_delete_wallet">删除钱包</string>
    <string name="btn_backup_mnemonic">备份助记词</string>
    <string name="content_gas">矿工费用</string>
    <string name="content_slow">慢</string>
    <string name="content_fast">快</string>
    <string name="content_splash">让财富更自由</string>
    <string name="content_payer">发款方</string>
    <string name="content_payee">收款方</string>
    <string name="content_note">备注</string>
    <string name="content_transaction_No">交易号</string>
    <string name="content_block_No">区块号</string>
    <string name="content_trading_time">交易时间</string>
    <string name="btn_copy_url">复制URL</string>
    <string name="enter_title_transfer_token">代币名称</string>
    <string name="enter_title_transfer_address">钱包地址</string>
    <string name="enter_title_transfer_amount">转出数量</string>
    <string name="enter_hint_transfer_amount">输入转出数量</string>
    <string name="enter_title_transfer_gas">矿工费</string>
    <string name="enter_hint_transfer_gas">请选择矿工费</string>
    <string name="btn_manage_wallet">管理钱包</string>
    <string name="btn_transactions">交易记录</string>
    <string name="btn_message_center">消息中心</string>
    <string name="btn_contacts">联系人</string>
    <string name="btn_help_support">帮助中心</string>
    <string name="btn_about_us">关于我们</string>
    <string name="btn_settings">系统设置</string>
    <string name="enter_hint_plaintext_private_key">明文私钥</string>
    <string name="enter_title_import_block">钱包体系</string>
    <string name="enter_title_import_wallet">钱包名称</string>
    <string name="enter_hint_import_wallet">钱包名</string>
    <string name="enter_title_import_password">钱包密码</string>
    <string name="enter_hint_import_password">密码</string>
    <string name="enter_hint_import_verify_password">重复密码</string>
    <string name="enter_title_import_prompt">密码提示</string>
    <string name="content_what_private_key">什么是私钥</string>
    <string name="content_copy_payment_address">复制收款地址</string>
    <string name="enter_hint_mnemonic">助记词，用空格分隔</string>
    <string name="enter_title_select_format">选择格式</string>
    <string name="content_btc">BTC 比特币</string>
    <string name="dialog_title_enter_password">请输入密码</string>
    <string name="dialog_btn_confirm">确认</string>
    <string name="title_order_details">订单详情</string>
    <string name="content_to_address">转入地址</string>
    <string name="content_payment_address">付款钱包</string>
    <string name="content_transfer">转账</string>
    <string name="enter_title_amount">金额</string>
    <string name="btn_confirm_payment">确认支付</string>
    <string name="btn_import">开始导入</string>
</resources>