<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.tokenbank.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_content_padding"
        android:paddingRight="@dimen/dimen_content_padding">

        <LinearLayout style="@style/Style.ItemLayout.WalletCreateLayout">

            <TextView
                style="@style/Style.WalletCreateTitle"
                android:text="@string/enter_title_block" />

            <TextView
                android:id="@+id/tv_wallet_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:drawableRight="@drawable/ic_arrow_right"
                android:hint="@string/enter_hint_choose_block"
                android:textColor="@color/color_text_3"
                android:textColorHint="@color/color_text_80"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <View style="@style/Style.Line" />

        <LinearLayout style="@style/Style.ItemLayout.WalletCreateLayout">

            <TextView
                style="@style/Style.WalletCreateTitle"
                android:text="@string/enter_title_wallet_name" />

            <EditText
                android:id="@+id/edt_wallet_name"
                style="@style/Style.Edit.WalletCreate"
                android:hint="@string/enter_hint_wallet_name" />
        </LinearLayout>

        <View style="@style/Style.Line" />

        <LinearLayout style="@style/Style.ItemLayout.WalletCreateLayout">

            <TextView
                style="@style/Style.WalletCreateTitle"
                android:text="@string/enter_title_password" />

            <EditText
                android:id="@+id/edt_wallet_pwd"
                style="@style/Style.Edit.WalletCreate.Pwd"
                android:hint="@string/enter_hint_password" />
        </LinearLayout>

        <View style="@style/Style.Line" />

        <LinearLayout style="@style/Style.ItemLayout.WalletCreateLayout">

            <TextView
                style="@style/Style.WalletCreateTitle"
                android:text="@string/enter_title_verify" />

            <EditText
                android:id="@+id/edt_wallet_pwd_confirm"
                style="@style/Style.Edit.WalletCreate.Pwd"
                android:hint="@string/enter_hint_verify" />
        </LinearLayout>

        <View style="@style/Style.Line" />

        <LinearLayout style="@style/Style.ItemLayout.WalletCreateLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Style.WalletCreateTitle"
                    android:text="@string/enter_title_prompt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.5dp"
                    android:text="@string/enter_hint_prompt"
                    android:textSize="@dimen/text_size_11" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_wallet_tips"
                style="@style/Style.Edit.WalletCreate" />
        </LinearLayout>

        <View style="@style/Style.Line" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_service_terms"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/selector_service_terms" />

            <TextView
                android:id="@+id/tv_service_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Style.Btn.Theme"
            android:layout_marginTop="50dp"
            android:text="@string/btn_create_wallet_done" />
    </LinearLayout>
</LinearLayout>