<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_wallet_privatekey"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_importwallet_privatkey"
            android:hint="@string/enter_hint_plaintext_private_key"
            android:padding="5dp"
            android:textColor="@color/common_black_fontcolor"
            android:textSize="14sp"
            android:text=""/>

        <RelativeLayout
            android:id="@+id/layout_block_chain"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/block_chain_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/enter_title_import_block"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_block_chain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@id/block_chain_title"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                 />
            <!--android:src="@drawable/ic_arrow_right"-->
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_title_wallet_name"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:background="@null"
                android:hint="@string/enter_hint_import_wallet"
                android:inputType="text"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/split_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_title_import_password"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_wallet_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:background="@null"
                android:hint="@string/enter_hint_import_password"
                android:inputType="textPassword"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/split_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_title_verify_password"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_wallet_pwd_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:background="@null"
                android:hint="@string/enter_hint_import_verify_password"
                android:inputType="textPassword"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/split_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_title_import_prompt"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_pwd_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_hint_optional"
                android:textColor="@color/common_black_fontcolor"
                android:textSize="16sp"
                android:layout_marginLeft="18dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/split_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_service_terms"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/selector_service_terms" />

            <TextView
                android:id="@+id/tv_service_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_import_wallet"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_createwallet_btnbg"
            android:gravity="center"
            android:text="@string/btn_import"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_about_privatekey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/content_what_private_key"
            android:textColor="@color/tab_text_color_selected"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>