<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.tokenbank.activity.BWDInfoActivity">

    <com.tokenbank.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_bakup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/title_copy_mnemonic"
        android:textColor="@color/common_black_fontcolor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_bakup_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/content_copy_mnemonic"
        android:textColor="#808080"
        android:textSize="14sp" />

    <ScrollView
        android:id="@+id/scrollview_words"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="22dp"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tokenbank.view.TagFlowLayout
                android:id="@+id/flow_word"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#f5f5f9" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_wallet_pk"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="22dp"
        android:background="#f5f5f9"
        android:gravity="center"
        android:textColor="@color/color_text_3"
        android:textSize="18sp"
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_splash_createwallet_bg"
        android:gravity="center"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:textSize="17sp" />


</LinearLayout>
